@@ -732,7 +732,10 @@ static void Init
 					// Skip splash screen?
 		bool skip_splash;
 		config->value("config/gameplay/skip_splash", skip_splash);
-
+		
+		// Make sure we have a proper palette before playing the intro.
+		gwin->get_pal()->load(EXULT_FLX,EXULT_FLX_EXULT0_PAL);
+		gwin->get_pal()->apply();
 		if(!skip_splash && (Game::get_game_type() != EXULT_DEVEL_GAME || U7exists("<STATIC>/intro.dat"))) {
 			if (midi) midi->set_timbre_lib(MyMidiPlayer::TIMBRE_LIB_INTRO);
 			game->play_intro();
